@@ -1,3 +1,13 @@
+2009-04-13  Ada Chan  <adachan@apple.com>
+
+        <rdar://problem/6564956> URL field double-click selects entire domain, rather than single word or entire URL
+        Revert back to the old word breaking behavior by using en_US_POSIX locale.        
+
+        Reviewed by Steve Falkenburg.
+
+        * platform/text/win/TextBreakIteratorInternalICUWin.cpp:
+        (WebCore::currentTextBreakLocaleID):
+
 2009-04-13  Darin Adler  <darin@apple.com>
 
         Reviewed by Dan Bernstein.
